--- a/ada/config.json
+++ b/ada/config.json
@@ -1,9 +1,9 @@
 {
   "name": "Hey Ada!",
-  "version": "1.0",
+  "version": "1.1",
   "slug": "ada",
   "description": "Voice assistant powered by Home Assistant",
-  "url": "https://github.com/nubicula/ada/blob/master/ada",
+  "url": "https://github.com/nubicula/ada",
   "arch": ["armhf", "armv7", "amd64"],
   "startup": "application",
   "boot": "auto",
